finally fixed most visible bugs with styleDark.css

--- a/src/css/styleDark.css
+++ b/src/css/styleDark.css
@@ -87,11 +87,14 @@ button[disabled=disabled], button:disabled {
     background-color: #FFF;
 }
 
+#registers th,#registers td{
+      color: white;
+}
 #output-log{
     max-height: 100%;
     padding: 0.5em 1em;
     text-align: right;
-	font-family: sans-serif;
+	  font-family: sans-serif;
     overflow-y: scroll;
     height: 100%;
     min-height: 100%;
@@ -99,6 +102,32 @@ button[disabled=disabled], button:disabled {
 }
 
 
-.dropdown-menu > li > a {
+.dropdown-menu > li > a, .container, .container > .nav > li > a {
   color: black;
+}
+
+.container > .nav > li > a:hover{
+  background-color: #eee;
+}
+
+#memory tr:nth-child(odd) .cell:nth-child(even) {
+    background: #f2f2f2;
+}
+
+#memory tr:nth-child(odd) .cell:nth-child(odd) {
+    background: #404040;
+    color: white;
+}
+
+#memory tr:nth-child(even) .cell:nth-child(even) {
+    background: #404040;
+    color: white;
+}
+
+#memory tr:nth-child(even) .cell:nth-child(odd) {
+    background: #f2f2f2;
+}
+
+#memory-headers th, #memory th{
+  color: white;
 }
